syntax = "proto3";

package users.messages.v1;

message GetMeRequest {}
