syntax = "proto3";

package users.messages.v1;

import "google/protobuf/timestamp.proto";
import "permissions/messages/v1/role.proto";

message User {
  string id = 1;
  string email = 2;
  string full_name = 3;
  permissions.messages.v1.Role role = 5;
  google.protobuf.Timestamp created_at = 6;
}
